tests/rosetta/transpiler/OCaml/distance-and-bearing.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/distance-and-bearing.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Distance-and-bearing" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/distance-and-bearing.ml", line 273, characters 207-209:
273 |   let line = (((((((((Printf.sprintf "%.16g" (round (Obj.repr (dist)) (Obj.repr (1)))) ^ "\t") ^ (Printf.sprintf "%.16g" (round (Obj.repr (bear)) (Obj.repr (0))))) ^ "\t") ^ __show ((try List.assoc ("icao") ap with Not_found -> 0))) ^ "\t") ^ __show ((try List.assoc ("country") ap with Not_found -> 0))) ^ " ") ^ __show ((try List.assoc ("name") ap with Not_found -> 0))) in
                                                                                                                                                                                                                     ^^
Error: This expression has type Obj.t but an expression was expected of type
         (string * 'a) list
